ee.kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  namespace: jenkins
  name: jenkins-svc
spec:
  selector:
    app: jenkins-master
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: jenkins
  name: jenkins-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-master
  template:
    metadata:
      labels:
        app: jenkins-master
    spec:
      serviceAccountName: jenkins-service-account
      containers:
      - image: jenkins/jenkins:lts-alpine
        name: master
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        # resources:
        # limits:
        #   cpu: 500m
        #   memory: 1500Mi
        # requests:
        #   cpu: 500m
        #   memory: 1500Mi
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins-pvc
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  namespace: jenkins
  name: jenkins-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins.kube.docker.ee
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: 8080
  tls:
  - hosts: 
    - jenkins.kube.docker.ee
    secretName: jenkins-secret
